[package]
name = "b4s"
version = "0.1.0"
edition = "2021"
authors = ["Alex Povel <rust@alexpovel.de>"]
description = "Binary Search Single Sorted String: Perform binary search on a single, delimited string slice of sorted but unevenly sized substrings."
license-file = "LICENSE"
repository = "https://github.com/alexpovel/b4s"
readme = "README.md"
documentation = "https://docs.rs/b4s"
keywords = ["search", "string", "str", "uneven"]
categories = ["algorithms"]

[dependencies]
ascii = "1.1.0"
itertools = "0.10.5"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
phf = { version = "0.11.1", features = ["macros"] }
rstest = "0.17.0"
