[package]
name = "afl-target"
version = "0.1.0"
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "0.13.3"
arbitrary = { version = "1.3.0", features = ["derive"] }

[dependencies.b4s]
path = ".."
