[package]
name = "afl-target"
version = "0.3.1"
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "0.13.0"
arbitrary = { version = "1.3.0", features = ["derive"] }

[dependencies.b4s]
path = ".."
